2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.addin.xml: Cosmetic fix in command label.

2007-08-23  Marcos David Marín Amador <MarcosMarin@gmail.com>

	* MonoDevelop.Deployment/InstallResolver.cs: Added support for
	  targets Include and IncludeRoot.

	* MonoDevelop.Deployment/TargetDirectory.cs: Added targets Include
	  and IncludeRoot.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.addin.xml,
	  MonoDevelop.Deployment.NodeBuilders/PackageNodeBuilder.cs,
	  MonoDevelop.Deployment.NodeBuilders/PackagingProjectNodeBuilder.cs,
	  MonoDevelop.Deployment.mdp, MonoDevelop.Deployment/DeployService.cs,
	  gtk-gui/objects.xml,
	  MonoDevelop.Deployment.Gui/FileCopyConfigurationSelector.cs,
	  MonoDevelop.Deployment.Gui/PackageBuilderEditor.cs, Makefile.am:
	  Reorganized the extension point hierarchy. Embedded all add-in manifests
	  as resources.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.NodeBuilders/PackageNodeBuilder.cs,
	  MonoDevelop.Deployment.NodeBuilders/PackagingProjectNodeBuilder.cs:
	  Converted DispatchService to a static class.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment/DeployContext.cs: Fix build.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment/DeployContext.cs,
	  MonoDevelop.Deployment.Gui/PackageBuilderEditor.cs: Use the log
	  service for logging errors.

2007-07-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment/InstallResolver.cs,
	  MonoDevelop.Deployment/DeployFile.cs,
	  MonoDevelop.Deployment/DeployProperties.cs,
	  MonoDevelop.Deployment.Gui/PropertyProvider.cs: Added property for